<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_start"
        android:icon="@drawable/icon_start"
        android:title="@string/title_start" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/icon_infos"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/icon_game"
        android:title="@string/title_game" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/icon_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_imprint"
        android:icon="@drawable/icon_start"
        android:title="@string/title_imprint" />

</menu>