<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_start">

    <fragment
        android:id="@+id/navigation_start"
        android:name="com.example.elevent.ui.start.StartFragment"
        android:label="@string/title_start"
        tools:layout="@layout/fragment_start" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.elevent.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.example.elevent.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.elevent.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_imprint"
        android:name="com.example.elevent.ui.imprint.ImprintFragment"
        android:label="@string/title_imprint"
        tools:layout="@layout/fragment_imprint" />
</navigation>