<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/map_info_box_width"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/location_title"
        style="@style/mapTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/location_info_background_color"
        android:gravity="center"
        android:paddingTop="@dimen/map_info_box_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/map_item_title_01" />

    <TextView
        android:id="@+id/location_info"
        style="@style/mapNormalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/location_info_background_color"
        android:paddingStart="@dimen/map_info_box_padding"
        android:paddingTop="@dimen/map_info_box_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_title"
        tools:text="@string/map_item_text_01" />

    <TextView
        android:id="@+id/go_to_info_btn"
        style="@style/mapNormalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/location_info_background_color"
        android:paddingStart="@dimen/map_info_box_padding"
        android:paddingBottom="@dimen/map_info_box_padding"
        android:textColor="@color/map_more_info_text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_info"
        tools:text="@string/map_go_to_info_btn" />

    <ImageView
        android:layout_width="@dimen/triangle_width_height"
        android:layout_height="@dimen/triangle_width_height"
        android:background="@drawable/triangle"
        android:rotation="180"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_info_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>